--- a/README
+++ b/README
@@ -1,1 +1,11 @@
-Hello World
+#My Personal API app
+
+The app has been designed to show a dashboard with my profile and also list my current projects.
+
+It also has a form from which I can create a new project.
+
+The list of projects allow the user to edit and save as well as delete the project.
+
+[Heroku link](https://enigmatic-woodland-73386.herokuapp.com/)
+
+The website utilizes the CRUD and include all RESTful Routes.
